# ai-team-runtime

./: .gitignore  CHANGELOG.md  README.md  README_zh.md  SKILL.md  pyproject.toml  using-superpowers-zh.md
.github/: release.yml
Acceptance/: SKILL.md  context.md  contract.md
Dev/: SKILL.md  context.md  contract.md
Ops/: SKILL.md  context.md
Product/: SKILL.md  context.md  contract.md
QA/: SKILL.md  context.md  contract.md
agent_team/: __init__.py  acceptance_policy.json  acceptance_policy.py  alignment.py  backend.py  board.py  board_assets.py  cli.py  codex_exec.py  codex_isolation.py  codex_skill_installer.py  execution_context.py  executor.py  executor_env.py  five_layer_init.py  gate_evaluator.py  gatekeeper.py  harness_paths.py  intake.py  interactive.py  judge_context.py  memory_layers.py  models.py  openai_sandbox_judge.py  orchestrator.py  packaged_assets.py  panel.py  project_scaffold.py  project_structure.py  review.py  review_gates.py  roles.py  runtime_driver.py  runtime_metrics.py  skill_registry.py  stage_contracts.py  stage_harness.py  stage_inputs.py  stage_machine.py  stage_payload.py  (+9 more)
ai_company/: acceptance_policy.json  alignment.py  backend.py  board.py  board_assets.py  board_server.py  cli.py  codex_exec.py  codex_skill_installer.py  harness_paths.py  intake.py  interactive.py  models.py  orchestrator.py  packaged_assets.py  project_scaffold.py  review.py  skill_registry.py  stage_contracts.py  stage_harness.py  stage_machine.py  state.py  tech_plan.py  workflow_summary.py
docs/: SOP_简洁版.md  session-directory-layout.md
scripts/: agent-team-run.sh  company-init.sh  company-run.sh  install-codex-agent-team.sh  install-codex-ai-team.sh  install-codex-skill.sh
tests/: test_alignment.py  test_board.py  test_board_server.py  test_cli.py  test_cli_judge_stage_result.py  test_codex_exec.py  test_codex_isolation.py  test_console_data.py  test_console_scripts.py  test_dev_command.py  test_docs.py  test_execution_context.py  test_executor.py  test_five_layer_init.py  test_gate_evaluator.py  test_gatekeeper.py  test_harness_paths.py  test_intake.py  test_judge_context.py  test_memory_layers.py  test_openai_sandbox_judge.py  test_orchestrator.py  test_packaged_assets.py  test_panel.py  test_policy.py  test_release_tooling.py  (+17 more)
(+127 files in other folders)
