[project]
name = "ai-company"
version = "0.2.0b2"
description = "Local workflow engine for a one-person AI company."
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
openai-sandbox = ["openai-agents[docker]"]

[project.scripts]
ai-team = "ai_company.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ai_company"]
include-package-data = true

[tool.setuptools.package-data]
ai_company = [
    "acceptance_policy.json",
    "assets/roles/*/*.md",
    "assets/codex_skill/ai-company-workflow/SKILL.md",
    "assets/codex_skill/ai-company-workflow/scripts/*.sh",
]
