[project]
name = "agent-team-runtime"
version = "0.2.0b3"
description = "CLI-first AI agent team orchestration runtime."
readme = "README.md"
requires-python = ">=3.13"

[project.optional-dependencies]
openai-sandbox = ["openai-agents[docker]"]

[project.scripts]
agent-team = "agent_team.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_team"]
include-package-data = true

[tool.setuptools.package-data]
agent_team = [
    "acceptance_policy.json",
    "assets/roles/*/*.md",
    "assets/skills/*/SKILL.md",
    "assets/codex_skill/agent-team-workflow/SKILL.md",
    "assets/codex_skill/agent-team-workflow/scripts/*.sh",
]
