[project]
name = "agent-team-runtime"
version = "0.2.0b7"
description = "CLI-first AI agent team orchestration runtime."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "starlette>=0.37,<1",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
openai-sandbox = ["openai-agents[docker]"]
test = ["pytest", "httpx"]

[project.scripts]
agent-team = "agent_team.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["agent_team"]
include-package-data = true

[tool.setuptools.package-data]
agent_team = [
    "acceptance_policy.json",
    "assets/roles/*/*.md",
    "web_dist/*",
    "web_dist/assets/*",
    "assets/skills/*/SKILL.md",
]
